<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iSport</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登  录</string>
    <string name="account">请输入帐号</string>
    <string name="password">密 码</string>
    <string name="confirm_pass">确认密码</string>
    <string name="findpassword">找回密码</string>
    <string name="next_step">完 成</string>
    <string name="register">没有帐号？</string>
    <string name="registerPage">注 册</string>
    <string name="submit_act">发  布</string>
    <string name="act_main_title">活动主题</string>
     <string name="searchWord">搜 索</string>
     <string name="hasAccount">已有账号？</string>
     <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
       <string name="address">地址</string>
       <string name="date">日期</string>
       <string name="time">时间</string>
       <string name="classs">分类</string>
       <string name="open_file_error_format">不支持此类文件格式</string>
       <string name="sdcard_unmonted_hint">木有发现SD卡</string>
      <string-array name="planets_arry"> 
        <item>篮球</item> 
        <item>足球</item> 
        <item>乒乓球</item>
        <item>羽毛球</item> 
        <item>跑步</item> 
        <item>自行车</item> 
        <item>游泳</item> 
        <item>瑜伽</item> 
        <item>健身</item> 
        <item>网球</item> 
    </string-array> 
</resources>
