<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgColor"
    android:orientation="vertical" >

<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="45.0dip"
    android:background="@color/loginColor"
    android:gravity="center_vertical"
    >

    <ImageView
        android:id="@+id/title_bar_menu_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="3dp"
        android:gravity="center"
        android:src="@drawable/fanhui" />

   
    <TextView
        android:id="@+id/title_bar_name"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ellipsize="end"
        android:gravity="center"   
        android:singleLine="true" 
        android:layout_alignTop="@+id/title_bar_menu_btn" 
        android:text="@string/registerPage"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    
   <!--  <TextView
        android:id="@+id/title_bar_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingLeft="50dip"
        android:paddingRight="50.0dip"
        android:singleLine="true"
        android:text="@string/registerPage"
        android:textColor="#ffffff"
        android:textSize="20sp" />
         -->
     

    <Button
        android:id="@+id/complete" 
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginRight="5dp" 
        android:text="@string/next_step"
        android:layout_alignTop="@+id/title_bar_menu_btn" 
        android:background="@drawable/shape"
        android:textColor="@color/loginColor"
        />
 
</RelativeLayout>
<View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@drawable/ic_shelf_category_divider" />

<AutoCompleteTextView
    android:id="@+id/account"
     android:layout_width="310dp"
    android:layout_gravity="center"
    android:layout_marginTop="25dp"
    android:layout_height="35dp"
    
    android:ems="10"
      android:textSize="16sp"
    android:hint="@string/account"
    android:textColorHint="@color/fontColor"
    android:drawablePadding="5dp"
    android:background="@drawable/shape"
    android:drawableLeft="@drawable/account"/>

<AutoCompleteTextView
    android:id="@+id/password"
    android:layout_width="310dp"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:layout_height="35dp"
    android:ems="10"
    android:textSize="16sp"
    android:drawableLeft="@drawable/lock"
    android:hint="@string/password"
    android:textColorHint="@color/fontColor"
    android:drawablePadding="5dp"
    android:background="@drawable/shape" />

<AutoCompleteTextView
    android:id="@+id/confirm_pass"
    android:layout_width="310dp"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:layout_height="35dp"
    android:ems="10"
    android:textSize="16sp"
    android:drawableLeft="@drawable/lock"
    android:hint="@string/confirm_pass"
    android:textColorHint="@color/fontColor"
    android:drawablePadding="5dp"
    android:background="@drawable/shape" />

<RelativeLayout 
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_gravity="center"
    >


<TextView
    android:id="@+id/hasAccount"
    android:layout_width="wrap_content"
    android:layout_height="22dp"
    android:gravity="right"
    android:layout_alignParentRight="true"
    android:layout_marginTop="15dp"
    android:ems="10"
    android:textSize="14sp"
    android:layout_marginRight="10dp"
    android:textColor="@color/findPassword"
    android:text="@string/hasAccount" />
    
 </RelativeLayout>   


</LinearLayout>